[workspace]
resolver = "3"
members = ["crates/*"]

[package]
name = "prose-pod-server-api"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
anyhow = { version = "=1.0.99", default-features = false }
arc-swap = { version = "1", default-features = false }
axum = { version = "=0.8.4", default-features = false, features = ["tokio", "http1", "json", "matched-path"] }
axum-hot-swappable-router = { git = "https://github.com/RemiBardon/axum-hot-swappable-router.git", rev = "26b1a3324dafaa7df05355275c9b878045aebd2d", default-features = false }
base64 = { version = "=0.22.1", default-features = false }
figment = { version = "=0.10.19", default-features = false, features = ["env", "toml"] }
iso8601-duration = { version = "=0.2.0", default-features = false, features = ["serde"] }
jid = { version = "=0.12.0", default-features = false, features = ["serde"] }
media-type-detect = { path = "crates/media-type-detect" }
prosody-child-process = { path = "crates/prosody-child-process" }
prosody-http = { path = "crates/prosody-http", features = ["secrecy", "mod_http_oauth2"] }
prosody-rest = { path = "crates/prosody-rest" }
prosodyctl = { path = "crates/prosodyctl", features = ["secrecy", "mod_groups", "mod_invites"] }
rand = { version = "=0.9.2", default-features = false }
secrecy = { version = "=0.10.3", default-features = false }
serde = { version = "=1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "=1.0.145", default-features = false }
serde_with = { version = "=3.14.1", default-features = false, features = ["base64"] }
thiserror = { version = "=2.0.17", default-features = false }
tokio = { version = "=1.47.1", default-features = false, features = ["macros", "rt-multi-thread", "signal", "io-util", "process", "sync", "time"] }
tokio-util = { version = "=0.7.16", default-features = false, features = ["time"] }
toml = { version = "=0.9.8", default-features = false, features = ["display", "serde"] }
tracing = { version = "=0.1.41", default-features = false }
tracing-subscriber = { version = "=0.3.20", default-features = false, features = ["fmt", "env-filter", "ansi"] }

[dev-dependencies]
axum = { version = "*", features = ["macros"] }

# See defaults at <https://doc.rust-lang.org/cargo/reference/profiles.html#dev>.
# NOTE: We made some values explicit, even if they're already the default.
[profile.dev]
opt-level = 0
# NOTE: In most cases, we won't need debug information in the binary (which adds a LOT of bloat).
#   If needed, use the `dev-debug` profile.
debug = false
debug-assertions = true

[profile.dev-debug]
inherits = "dev"
debug = true

[profile.staging]
inherits = "dev"
lto = "thin"
debug = false
debug-assertions = false
panic = "unwind"
incremental = true

# See defaults at <https://doc.rust-lang.org/cargo/reference/profiles.html#release>.
# NOTE: We made some values explicit, even if they're already the default.
[profile.release]
opt-level = "s"
lto = "thin"
debug = false
debug-assertions = false
# NOTE: No need to `strip = "debuginfo"` since debug info won't be generated in the first place.
strip = "symbols"
panic = "unwind"
