[workspace]
members = ["crates/*"]

[package]
name = "backup"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]
autotests = false
autobenches = false

[dependencies]
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false, features = ["std"] }
figment = { version = "0.10", default-features = false }
iso8601-duration = { version = "0.2", default-features = false, features = ["serde"] }
json = { version = "1", default-features = false, package = "serde_json", features = ["std"] }
openpgp = { version = "2", default-features = false, package = "sequoia-openpgp", features = ["crypto-nettle"] }
ouroboros = { version = "0.18", default-features = false }
secrecy = { version = "0.10", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3", default-features = false }
thiserror = { version = "2", default-features = false }
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }
tracing = { version = "0.1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = { version = "1", default-features = false, features = ["serde"] }
urlencoding = { version = "2", default-features = false }
composable-stream = { path = "./crates/composable-stream" }

# Optional dependencies.
blake3 = { optional = true, version = "1", default-features = false, features = ["std"] }
s3 = { optional = true, version = "1", default-features = false, package = "aws-sdk-s3", features = [
    "default-https-client",
    "rt-tokio",
    "rustls",
    "sigv4a",
] }
sha2 = { optional = true, version = "0.10", default-features = false, features = ["std"] }
zstd = { optional = true, version = "0.13", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio", "html_reports"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi", "env-filter"] }

[lib]
name = "prose_backup"

[features]
default = ["zstd", "blake3", "provider_s3"]
test = ["figment/toml", "toml/display"]
example = ["figment/env", "figment/toml", "toml/display"]
all_providers = ["provider_fs", "provider_s3"]
provider_fs = []
provider_s3 = ["dep:s3"]
blake3 = ["dep:blake3"]
sha2 = ["dep:sha2"]
zstd = ["dep:zstd"]

[[test]]
name = "alternate_paths"
required-features = ["test", "provider_fs", "blake3", "sha2"]

[[test]]
name = "correctness"
required-features = ["test", "provider_fs", "blake3"]

[[test]]
name = "error_paths"
required-features = ["test", "provider_fs", "blake3"]

[[test]]
name = "happy_paths"
required-features = ["test", "zstd", "provider_fs", "blake3"]

[[test]]
name = "s3"
required-features = ["test", "provider_s3", "blake3"]

[[test]]
name = "scalability"
required-features = ["test", "provider_fs", "blake3"]

[[bench]]
name = "backup"
harness = false
required-features = ["zstd", "provider_fs", "blake3", "sha2"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[lints.clippy]
collapsible_if = "allow" # Style preference.
inline_always = "warn" # We don’t have benchmarks yet.
manual_map = "allow" # Style preference. Also compiles faster.
needless_borrow = "allow" # Style preference.
needless_borrows_for_generic_args = "allow" # Style preference.
type_complexity = "allow" # Composable streams need complex types.
