[package]
name = "prosody-child-process"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
anyhow = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = ["time", "io-util", "process"] }
tracing = { version = "0.1", default-features = false }
nix = { version = "0.31", default-features = false, features = ["signal"] }
