[package]
name = "prosody-http"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
anyhow = "1"
base64 = "0.22"
secrecy = { version = "0.10", optional = true, features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = { version = "3", features = ["json"] }

[features]
default = []
secrecy = ["dep:secrecy"]
mod_http_oauth2 = []
