[package]
name = "prosodyctl"
version = "0.1.0"
edition = "2024"

[lib]
name = "prosodyctl"
path = "src/prosodyctl.rs"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "time", "io-util", "process"] }
tracing = "0.1.41"

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
