[package]
name = "backup"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
anyhow = { version = "1", default-features = false }
bytes = { version = "1", default-features = false, features = ["std"] }
figment = { version = "0.10", default-features = false, features = ["toml"] }
sequoia-openpgp = { version = "2", default-features = false, features = ["crypto-nettle"] }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3", default-features = false }
thiserror = { version = "2", default-features = false }
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }
tracing = { version = "0.1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = { version = "0.9", default-features = false, features = ["display", "serde"] }
urlencoding = { version = "2", default-features = false }
zstd = { version = "0.13", default-features = false }

# Optional dependencies.
aws-sdk-s3 = { optional = true, version = "1", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
    "rustls",
    "sigv4a",
] }

# `main` dependencies (to remove)
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

[lib]
name = "prose_backup"

[[bin]]
name = "backup"
path = "src/main.rs"
required-features = ["destination_fs"]

[features]
default = ["destination_s3"]
test = ["destination_fs"]
destination_fs = []
destination_s3 = ["dep:aws-sdk-s3"]
