[package]
name = "backup"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false, features = ["std"] }
figment = { version = "0.10", default-features = false }
iso8601-duration = { version = "0.2", default-features = false, features = ["serde"] }
json = { version = "1", default-features = false, package = "serde_json", features = ["std"] }
openpgp = { version = "2", default-features = false, package = "sequoia-openpgp", features = ["crypto-nettle"] }
secrecy = { version = "0.10", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3", default-features = false }
thiserror = { version = "2", default-features = false }
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }
tracing = { version = "0.1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = { version = "0.9", default-features = false, features = ["serde"] }
urlencoding = { version = "2", default-features = false }
zstd = { version = "0.13", default-features = false }

# Optional dependencies.
s3 = { optional = true, version = "1", default-features = false, package = "aws-sdk-s3", features = [
    "default-https-client",
    "rt-tokio",
    "rustls",
    "sigv4a",
] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi", "env-filter"] }

[lib]
name = "prose_backup"

[features]
default = ["destination_s3"]
test = ["figment/toml", "toml/display"]
destination_all = ["destination_fs", "destination_s3"]
destination_fs = []
destination_s3 = ["dep:s3"]

[[test]]
name = "example1"
required-features = ["test", "destination_fs"]

[[test]]
name = "s3"
required-features = ["test", "destination_s3"]
