[workspace]
members = ["crates/*"]

[package]
name = "backup"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

[dependencies]
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false, features = ["std"] }
figment = { version = "0.10", default-features = false }
iso8601-duration = { version = "0.2", default-features = false, features = ["serde"] }
json = { version = "1", default-features = false, package = "serde_json", features = ["std"] }
openpgp = { version = "2", default-features = false, package = "sequoia-openpgp", features = ["crypto-nettle"] }
secrecy = { version = "0.10", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_with = { version = "3", default-features = false, features = ["macros"] }
sha2 = { version = "0.10", default-features = false, features = ["std"] }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3", default-features = false }
thiserror = { version = "2", default-features = false }
time = { version = "0.3", default-features = false, features = ["formatting", "std"] }
tracing = { version = "0.1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = { version = "0.9", default-features = false, features = ["serde"] }
urlencoding = { version = "2", default-features = false }
composable-stream = { path = "./crates/composable-stream"}
zstd = { version = "0.13", default-features = false }

# Optional dependencies.
s3 = { optional = true, version = "1", default-features = false, package = "aws-sdk-s3", features = [
    "default-https-client",
    "rt-tokio",
    "rustls",
    "sigv4a",
] }
ouroboros = { version = "0.18.5", default-features = false }

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi", "env-filter"] }

[lib]
name = "prose_backup"

[features]
default = ["destination_s3"]
test = ["example", "figment/toml", "toml/display"]
example = ["figment/env", "figment/toml", "toml/display"]
destination_all = ["destination_fs", "destination_s3"]
destination_fs = []
destination_s3 = ["dep:s3"]

[[test]]
name = "example1"
required-features = ["test", "destination_fs"]

[[test]]
name = "s3"
required-features = ["test", "destination_s3"]

[lints.clippy]
collapsible_if = "allow" # Style preference.
inline_always = "warn" # We don’t have benchmarks yet.
manual_map = "allow" # Style preference. Also compiles faster.
needless_borrow = "allow" # Style preference.
needless_borrows_for_generic_args = "allow" # Style preference.
type_complexity = "allow" # Composable streams need complex types.
