[package]
name = "writer-chain"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Rémi Bardon <remi@remibardon.name>"]

[target.'cfg(doc)'.dependencies]
anyhow = { version = "1", default-features = false }

[lints.clippy]
inline_always = "warn" # We don’t have benchmarks yet.
missing_inline_in_public_items = "warn" # Most functions are thin, and given the amount of genericity it’s better if it’s inlined.
type_complexity = "allow" # Composable streams need complex types.
